# PersonalScheduleBot

./: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
.run/: .gitignore  __main__.run.xml
personalschedulebot/: ElectiveLesson.py  ElectiveLessonDay.py  ElectiveLessonDaySpecific.py  ElectiveSelectedEntry.py  ElectiveSelectedLessons.py  ElectiveSelectedSource.py  ElectiveSubgroups.py  Lesson.py  LessonMessageMapper.py  ScheduleAPI.py  UserAlert.py  __init__.py  __main__.py  lesson_message_mapper.py  main.py  models.py  schedule_api.py
telegram_bot/: LessonMessageMapper.py
