[project]
name = "personalschedulebot"
version = "0.1.0"
description = ""
authors = [
    {name = "DTraitor",email = "sehhd32@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "python-telegram-bot[job-queue] (>=22.5,<23.0)",
    "mssql-python (==0.9.0)",
    "poetry-core (==2.1.3)",
    "tzdata (==2025.2)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
